--- a/app/views/pages/categories.html.erb
+++ b/app/views/pages/categories.html.erb
@@ -1,3 +1,5 @@
+<!-- See the /lib/tasks/bootstrap.rake file to modify the category db entries -->
+
       <h5>General Categories</h5>
        <ul>
         <li class="active"><%= link_to "All Items", items_path %></li>
