--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -14,6 +14,7 @@
 <!-- for debugging purpose WJ-->
 <%#= @values %>
 
+<!-- SEARCH BAR -->
 <% form_tag items_path, :method => 'get' do %>
   <p>
     <%= text_field_tag :search, params[:search] %>
