--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New search</h1>
+<h1>Advanced Search</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', searches_path %>
+<%= link_to 'Back', root_path %>
