--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,12 +31,6 @@
   <%= @item.bidvalue %>
 </p>
 
-<p>
-  <b>Highest bidder: </b>
-  <%= User.find(@item.biduser).email %>
-</p>
-
-
 <!-- <p>
   <b>Duration:</b>
   <%#= @item.duration %>
@@ -72,7 +66,7 @@
             <%= f.text_field :bidvalue %>
           </div>
          
-          <%= f.hidden_field :biduser, :value => current_user.id %>
+          <%#= f.hidden_field :biduser, :value => current_user.id %>
 
           <div class="actions">
             <%= f.submit "Place Bid"%>
