creating galleria - WJ/CD

--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -32,8 +32,8 @@
     <%= f.text_field :seller_email %>
   </div>
   <div class="field">
-    <%= f.label :ending_time %><br />
-    <%= f.datetime_select :ending_time %>
+    <%#= f.label :ending_time %><br />
+    <%#= f.datetime_select :ending_time %>
   </div>
   <div class="field">
     <%= f.label :condition %><br />
