--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,7 +1,13 @@
+<!-- for the main home page ajax working -->
+<style type="text/css">
+#ajax_group {}
+</style>
+
 <p id="notice"><%= notice %></p>
 
-<%= image_tag @item.photo.url(:large)  %>
+<%= image_tag @item.photo.url(:medium)  %>
 
+<div id="ajax_group">
 <p>
   <b>Title:</b>
   <%= @item.title %>
@@ -20,7 +26,7 @@
     Used
   <%end%>
 </p>
-
+</div>
 <p>
   <b>Starting price:</b>
   <%= @item.starting_price %>
@@ -46,12 +52,12 @@
   <b>Category:</b>
   <%= Category.find(@item.category_id).name %>
 </p>
-
+<div id="ajax_group">
 <p>
   <b>Seller:</b>
   <%= User.find(@item.seller_id).email %>
 </p>
-
+</div>
 <% if user_signed_in? && current_user.is_seller? && current_user.id == @item.seller_id%>
 <%= link_to 'Edit', edit_item_path(@item) %> |
 <% end %>
