--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
+<style type="text/css">
+#galleria			{float:left;}
+#ajax_description   {float:left; margin-left: 50px; }
+</style>
+<script src="galleria/galleria-1.2.5.min.js"></script>
 
 <% form_tag items_path, :method => 'get' do %>
           <p>
@@ -7,8 +12,50 @@
           </p>
 
 <% end %>
+<!-- Lively Homepage images-->
+<div id="galleria"></div>
+<div id ="ajax_description"><a href="#">Welcome to Bestbay</a></div>
+
+<script>
+var data = [
+        <% @items.each do |item| %>
+    {
+        thumb: '<%= item.photo.url(:small) %>',
+        image: '<%= item.photo.url(:large) %>',
+        //description: 'item',
+        //link: '/items/<%#=item.id%>',
+        layer: '<div><h2><%= item.title%></h2><a href="/items/<%=item.id%>"><p>Click Here To See More Information</p></a>'
+    },
+        <%end%>
+];
+
+        Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
+
+        $("#galleria").galleria({
+          width: 500,
+          height: 500,
+          autoplay: 3000,
+          showInfo: false,
+          dataSource: data
+        });
 
 
+<!-- for the next iteration WJ : making ajax page-->
+//        $("#galleria").mouseover(function(){
+//           var item_image = this.getElementsByClassName('active')[0].getElementsByTagName('img')[0];
+//            var file = item_image.src.substr(item_image.src.lastIndexOf('/')+1);
+//            var filename = file.substr(0,file.indexOf('?')) ;
+            //alert(filename);
+            //var item_clicked = select * from items where photo_file_name='filename'
+
+            //alert(item_clicked.id);
+//            $('#ajax_description').load('./items/1 #ajax_group');
+//           return false;
+//        });
+
+
+</script>
+<!-- Lively Homepage images-->
 
 <% if user_signed_in? %>
 
@@ -38,12 +85,12 @@
 
    <div class="home-item-desc span6">
     <h2 class ="heading"><%= item.title %></h2>
-
     <%= image_tag item.photo.url(:small)  %>
-
     <p><%= item.description %></p>
     <%= link_to 'View Details', item ,:class=> 'btn' %>
    </div>
  <% end %>
 </div>
+
+
 <hr>
