--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -19,7 +19,13 @@
     <%end%>
   </tr>
 
+
+<%if @search.items.empty?%>
+      <h5>No Match results were found.</h>
+<%else %>
+
 <% @search.items.each do |item| %>
+
   <tr>
     <td><%= item.title %></td>
     <td><%= link_to (image_tag (item.photo.url(:small)), :action => 'show', :controller => 'items'), item %></td>
@@ -47,5 +53,6 @@
         <% end %>
 
   </tr>
+<% end %>
 <% end %>
 </table>
