organizing home page view, dollar sign fixed - WJ/CD

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -53,7 +53,7 @@
             Used
         <%end%>
     </td>
-    <td><%= item.starting_price %></td>
+    <td><%= number_to_currency(item.starting_price, :unit=>"$") %></td>
     <!--<td><%#= item.duration %></td>         -->
 
     <td><%= Category.find(item.category_id).name %></td>
