--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <style type="text/css">
 #galleria			{float:left;}
-#ajax_description   {float:left; margin-left: 50px; }
+#user_notification   {float:left; margin-left: 50px; }
+#ajax_description   {float:left; margin-left: 70px; }
 </style>
 <script src="galleria/galleria-1.2.5.min.js"></script>
 
@@ -14,7 +15,7 @@
 <% end %>
 <!-- Lively Homepage images-->
 <div id="galleria"></div>
-<div id ="ajax_description"><a href="#">Welcome to Bestbay</a></div>
+<div id ="ajax_description"><a href="#"></a></div>
 
 <script>
 var data = [
@@ -56,7 +57,7 @@ var data = [
 
 </script>
 <!-- Lively Homepage images-->
-
+<div id ="user_notification">
 <% if user_signed_in? %>
 
   <div class="hero-unit1">
@@ -103,13 +104,15 @@ var data = [
 
 
 <% else %>
-    <div class="container">
-      <div class="hero-unit">
+<!--    <div class="container">    -->
+<!--      <div class="hero-unit">   -->
+      <div class="">
         <!--<h1>BestBay!</h1>-->
       </div>
-    </div>
+<!--      </div>                   -->
+<!--    </div>                     -->
 <% end %>
-
+</div>
 <!-- Example row of columns -->
   <hr>
 <div class="row">
