--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,14 +5,16 @@
 
 <p id="notice"><%= notice %></p>
 
+
+<h3><%= @item.title %></h3>
+
+
+<div class="item-show-container">
+<div class="item-image">
 <%= image_tag @item.photo.url(:medium)  %>
+</div>
 
-<div id="ajax_group">
-<p>
-  <b>Title:</b>
-  <%= @item.title %>
-</p>
-
+<div class ="item-details" ,id="ajax_group">
 <p>
   <b>Description:</b>
   <%= @item.description %>
@@ -26,44 +28,39 @@
     Used
   <%end%>
 </p>
-</div>
 <p>
   <b>Starting price:</b>
   <%= number_to_currency(@item.starting_price, :unit=>"$") %>
 </p>
-
 <p>
   <b>Current price: </b>
   <%= number_to_currency(@item.bidvalue, :unit=>"$") %>
 </p>
-
 <p>
   <b>Highest bidder: </b>
   <%= User.find(@item.biduser).email %>
 </p>
-
-
 <!-- <p>
   <b>Duration:</b>
   <%#= @item.duration %>
 </p> -->
-
 <p>
   <b>Category:</b>
   <%= Category.find(@item.category_id).name %>
 </p>
-<div id="ajax_group">
 <p>
   <b>Seller:</b>
   <%= User.find(@item.seller_id).email %>
 </p>
+
 </div>
+</div>
+
+
+
 <% if user_signed_in? && current_user.is_seller? && current_user.id == @item.seller_id%>
 <%= link_to 'Edit', edit_item_path(@item) %> |
 <% end %>
-
-<%= link_to 'Back', items_path %>
-
 
 <% if user_signed_in? %>
     <% if current_user.is_seller? %>
