--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
 
     <h1>Contact</h1>
     <p>
-      Hello. We are excited to talk to u. Contact us at 412-BESTBAY !
+      Hello. We are excited to talk to you. Contact us at 412-BESTBAY !
       <!--<a href="http://railstutorial.org/feedback">feedback page</a>-->
     </p>
