--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
 
   </div>
 
-  <div class="content">
+  <div class="content" id="flashmsg">
     <!-- Main hero unit for the home page -->
 
     <% if notice.present? -%>
