--- a/app/views/biddings/create.js.erb
+++ b/app/views/biddings/create.js.erb
@@ -1,5 +1,11 @@
 $("#new_bidding")[0].reset();
 
+$("#top").html('<div class="notice"> <%= @bid_notification_msg %> </div>');
+
+/*$("#current-price-value").replaceWith($('#current-price-value').html);*/
+
+ $("#current-price-value").html("<%= number_to_currency(Bidding.find(:first, :conditions => ["item_id IN (?)", @bidding.item_id] , :order => 'bid_amount DESC').bid_amount,:unit=>"$")%>");
+
 /* Replace the count of comments
 $("#bids_count").html("<%#= pluralize(Comment.count, 'Subscription') %>");
 */
