--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -36,9 +36,9 @@
 <p id="current-price">
   <b>Current price:</b>
   <span id ="current-price-value"><% if @highest_bid != nil %>
-  <%= number_to_currency(@highest_bid.bid_amount,:unit=>"$") %>
+  <%= number_to_currency(@highest_bid.bid_amount,:unit=>"$")%>
   <% else %>
-  <%= @item.starting_price %>
+  <%= number_to_currency(@item.starting_price,:unit=>"$")%>
   <% end %></span>
 </p>
 
