Lots of stuff...working on notifications ...

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,9 @@ var data = [
     </div>
 
   <!-- show user his/her notifications -->
-  <%= render 'notifications' %>
+  <div class="notifications" id="notifications">
+  <%= render current_user.notifications %>
+  </div>
 
 <% else %>
   <!--    <div class="container">    -->
