--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -59,13 +59,8 @@
 <%= link_to 'Edit', edit_item_path(@item) %> 
 <% end %>
 
-<% if user_signed_in? %>
-    <% if @item.seller_id != current_user %>
-
-
-<%= render :template => 'biddings/new', :locals => {:bidding => @bidding, :item => @item } %>
-
-    <% end %>
+<% if user_signed_in? && @item.seller_id != current_user.id%>
+  <%= render :template => 'biddings/new', :locals => {:bidding => @bidding, :item => @item } %>
 <% end %>
 
 
