Notification Polling done - AD,LM

--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,3 +1,5 @@
-<div class="notification" data-time="<%= notification.created_at.to_i %>" data-user-id="<%= current_user.id %>">
-<li>  <%=  notification.message %> </li>
+<div class="notification" data-user-id="<%= current_user.id %>">
+	<li>
+		<%= notification.message %>
+	</li>
 </div>
