--- a/app/views/notifications/index.js.erb
+++ b/app/views/notifications/index.js.erb
@@ -1,1 +1,3 @@
-$("#notifications").append("<%=raw escape_javascript(render(current_user.notifications)) %>");
+<% unless @notifications.empty? %>
+$("#notifications").append("<%= escape_javascript(raw render(@notifications)) %>");
+<% end %>
