--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,10 +4,8 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-    <div>
-     <label>Are you a seller?</label>
-     <br/>
-     <%= f.check_box :is_seller %></div>
+    <label>Are you a seller?</label></br>
+    <%= f.check_box :is_seller %></div>
 
     <div><%= f.label :email %>
       <br/>
@@ -59,6 +57,7 @@
       <br/>
       <%= f.text_field :country %></div>
 
+
     <!--
       <%#= country_select :user, :country, nil, {:include_blank=> true},
 {:class=>"topicField"} %>
@@ -68,4 +67,3 @@
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
-</div>
