--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,4 +1,4 @@
-<div class="notification" data-time="<%= notification.created_at.to_i %>" data-user-id="<%= current_user.id %>">
+<div class="notification">
 	<!-- Print the notification message -->
 	<li>
 		<%= notification.message %>
