rufus scheduler working for winner_notify LM

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -13,7 +13,7 @@
 
 
 <!-- SEARCH BAR -->
-<% form_tag items_path, :method => 'get' do %>
+<%= form_tag items_path, :method => 'get' do %>
   <p>
   <%#= text_field_tag :search, params[:search] %>
 <%#= submit_tag "Search", :name => nil %>
