--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,7 +5,17 @@
 
 <p id="top"></p>
 
-<% if (DateTime.now.in_time_zone("Eastern Time (US & Canada)").to_i >= @item.expires_at.in_time_zone("Eastern Time (US & Canada)").to_i) %>
+-----
+<%= DateTime.now %>
+<%= DateTime.now.in_time_zone("Eastern Time (US & Canada)")%>
+<%= DateTime.now.in_time_zone("Eastern Time (US & Canada)").to_i %>
+     ------
+<%= @item.expires_at %>
+<%= @item.expires_at.in_time_zone("Eastern Time (US & Canada)") %>
+<%= @item.expires_at.in_time_zone("Eastern Time (US & Canada)").to_i %>
+-------
+
+<% if (DateTime.now >= Item.find(@item.id).expires_at) %>
 <h3><%= @item.title %></h3> <span class="label important">Expired</span>
 <% else %>
 <h3><%= @item.title %></h3>
@@ -47,7 +57,7 @@
 </p>
 
 <p id="expires-at">
-  <b>Expires on:</b> <%=  @item.expires_at.in_time_zone('Eastern Time (US & Canada)').to_formatted_s(:long_ordinal) %>
+  <b>Expires on:</b> <%=  @item.expires_at.to_formatted_s(:long_ordinal) %>
 </p>
 
 <!-- <p>
