last minute css

--- a/app/views/biddings/new.html.erb
+++ b/app/views/biddings/new.html.erb
@@ -10,8 +10,8 @@
     <%= f.hidden_field :user_id, :value => current_user.id %>
 
  <div class="actions">
-    <%= f.submit "Place Bid"%>
-  </div>
+    <%= f.submit "Place Bid" , :class => "btn primary medium" %>
+ </div><br />
 <% end %>
 
 
