--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -56,6 +56,6 @@
   <%= f.hidden_field :bidding_closed, :value => false %>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Upload Item",:class => "btn primary medium"%>
   </div>
 <% end %>
