--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,7 +19,7 @@
 <%#= submit_tag "Search", :name => nil %>
 
     <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :name => nil %>
+    <%= submit_tag "Search", :name => nil, :class => "btn primary small" %>
     <%= link_to "Advanced Search", advsearch_path %>
 
   </p>
