--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,10 @@
 <footer>
-  <nav class="round">
-    <ul class="footer-links">
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
+  <!--
+  <nav class="">
+    <ul class="">
+      <li><%#= link_to "About", about_path %></li>
+      <li><%#= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
+  -->
 </footer>
