--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,6 +1,6 @@
 <div class="notification">
 	<!-- Print the notification message -->
-	<li>
+	<li class="notification-message"><span class="label success">New</span>
 		<%= notification.message %>
 	</li>
 </div>
