--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,13 +8,21 @@
 <%= form_tag items_path, :method => 'get' do %>
           <p>
             <%= text_field_tag :search, params[:search] %>
-            <%= submit_tag "Search", :name => nil %>
+            <%= submit_tag "Search", :name => nil , :class => "btn primary small"%>
             <%= link_to "Advanced Search", advsearch_path %>
           </p>
 
 <% end %>
 
 <!-- Lively Homepage images-->
+
+<% if user_signed_in? %>
+    <% if current_user.is_seller? %>
+        <p class="welcome-text">Offer Items and Mint Money in Minutes !! </p>
+    <% else %>
+        <p class="welcome-text">Shop, Bid and Celebrate !!</p>
+    <% end %>
+<% end %>
 
 <div id="galleria"></div>
 <div id ="ajax_description"><a href="#"></a></div>
@@ -83,11 +91,11 @@ var data = [
     <div class="hero-unit1">
       <h2>Welcome, <%= current_user.first_name %> !</h2>
       <% if current_user.is_seller? %>
-          <p>Browse Items, Offer Item and mint money in minutes </p>
+          <p> Why delay? Offer your items for bidding :-) </p>
           <a class="btn primary large" href='<%= new_item_path %>'>Offer Your Item »</a>
-          <a class="btn primary large" href='<%= items_path %>'>All Items »</a>
+          <a class="btn primary large" href='<%= items_path %>'>Hot Items »</a>
       <% else %>
-          <p>Shop, Bid and Celebrate!!</p>
+          <p>Check out the hot items and bid on them :-) </p>
           <a class="btn primary large" href='<%= items_path %>'>Hot Items »</a>
       <% end %>
     </div>
@@ -101,13 +109,11 @@ var data = [
 
 
 <% else %>
-  <!--    <div class="container">    -->
-  <!--      <div class="hero-unit">   -->
         <div class="">
-          <!--<h1>BestBay!</h1>-->
+          <h1>Welcome to BestBay!</h1>
+          <p> Now, checkout the hot items. Register with us to participate in auctions </p>
+          <a class="btn primary large" href='<%= items_path %>'>Hot Items »</a>
         </div>
-  <!--      </div>                   -->
-  <!--    </div>                     -->
 <% end %>
 </div>
 
