--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -165,3 +165,8 @@ nav ul li a:hover {
  color: #3366ff;
     font-weight: bold;
 }
+
+.welcome-text {
+    font-size: 18px;
+    font-weight: bold;
+}
