--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,12 +4,11 @@
 </style>
 
 <p id="top"></p>
-
-
-<% if DateTime.now.to_formatted_s(:db) >= @item.expires_at.to_formatted_s(:db) %>
-<h3><%= @item.title %></h3> <span class="label important">Expired</span>
-<% else %>
 <h3><%= @item.title %></h3>
+<% if DateTime.now.to_formatted_s(:db) >= @item.expires_at.to_formatted_s(:db) %>
+ <span class="label important">Expired</span>
+<% else %>
+<%= button_to "Add to watchlist" , add_to_watch_list_item_path(@item) %>
 <% end %>
 
 <div class="item-show-container">
