Changed query for categories on new item page to be compatible with Heroku - CD

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -44,7 +44,9 @@
   
   <div class="field">
     <%= f.label "Subcategory" %><br />
-    <%= f.select :category_id, Category.where("parentID NOT ?", nil).collect {|category| [ category.name, category.id ]} %>
+    <!-- %= f.select :category_id, Category.where("parentID NOT ?", nil).collect {|category| [ category.name, category.id ]} % -->
+    <%= f.select :category_id, Category.find_all_by_parentID(!nil).collect {|category| [ category.name, category.id ]} %>
+  
   </div>
 
   <div class="field">
