--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -6,3 +6,5 @@
 <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
 <%= stylesheet_link_tag 'custom', :media=>"screen, projection" %>
 <%= stylesheet_link_tag 'bootstrap', :media=>"screen, projection" %>
+<%= stylesheet_link_tag 'jquery-ui-1.8.16.custom', :media=>"screen, projection" %>
+
