--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title><%= title %></title>
   <!--added to fix destroy bug-->
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "jquery-ui.custom.min" %>
   <%= csrf_meta_tag %>
   <%= render 'layouts/stylesheets' %>
 
