--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -62,7 +62,7 @@
       <%#= country_select :user, :country, nil, {:include_blank=> true},
 {:class=>"topicField"} %>
 -->
-    <div><%= f.submit "Sign up" ,:class => "btn primary small"%></div></br>
+    <div><%= f.submit "Sign up" ,:class => "btn primary medium"%></div></br>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
