--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,15 +1,18 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Sign in", new_session_path(resource_name),  :class => "btn primary large" %>
+  <%= link_to "Sign in", new_session_path(resource_name),  :class => "btn primary medium" %>
 <% end -%>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= button_to "Sign up", new_registration_path(resource_name),  :class => "btn primary small"%>
-<% end -%>
+<!--
+<%#- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <%#= button_to "Sign up", new_registration_path(resource_name),  :class => "btn primary small"%>
+<%# end -%>
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <%= button_to "Forgot your password?", new_password_path(resource_name), :class => "btn primary medium"%><br />
-<% end -%>
+<%#- if devise_mapping.recoverable? && controller_name != 'passwords' %>
+  <%#= button_to "Forgot your password?", new_password_path(resource_name), :class => "btn primary medium"%><br />
+<%# end -%>
 
+-->
+&nbsp;&nbsp;&nbsp;&nbsp;
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
 <% end -%>
