--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,9 +1,11 @@
 <p id="top"></p>
 <h3><%= @item.title %></h3>
 <% if DateTime.now.to_formatted_s(:db) >= @item.expires_at.to_formatted_s(:db) %>
- <span class="label important">Expired</span>
-<% else %>
-<%= button_to "Add to watchlist" , add_to_watch_list_item_path(@item) %>
+    <span class="label important">Expired</span>
+<% elsif Watchlist.find_by_user_id_and_item_id(current_user.id, @item.id) != nil %>
+    <%= button_to "Remove from watchlist" , remove_from_watch_list_item_path(@item), :class => "btn primary medium" %>
+ <% else %>
+    <%= button_to "Add to watchlist" , add_to_watch_list_item_path(@item), :class => "btn primary medium" %>
 <% end %>
 
 <div class="item-show-container">
@@ -40,7 +42,14 @@
 </p>
 
 <p id="expires-at">
-  <b>Expires on:</b> <%=  @item.expires_at.to_formatted_s(:db) %>
+  <b>Expires at:</b> <%=  @item.expires_at.to_formatted_s(:db) %>
+   <div id="counter"></div>
+      <div class="desc">
+        <div>Days</div>
+        <div>Hours</div>
+        <div>Minutes</div>
+        <div>Seconds</div>
+      </div>
 </p>
 
 <!-- <p>
@@ -71,6 +80,31 @@
 </div>
 </div>
 
-
-
-<!--<a class="btn primary large offer-item" href='<%#= item_path %>'>Place Bid »</a>-->
+  <script type="text/javascript">
+      $(function(){
+        $('#counter').countdown({
+          image: '/img/digits.png',
+            //<%#expiry = DateTime.now - @item.expires_at%>
+            // startTime: '<%#=expiry.day%>:<%#=expiry.hours%>:<%#=expiry.minutes%>:<%#=expiry.seconds%>'
+          startTime: '01:12:12:00'
+        });
+      });
+    </script>
+    <style type="text/css">
+      br { clear: both; }
+      .cntSeparator {
+        font-size: 54px;
+        margin: 10px 7px;
+        color: #000;
+      }
+      .desc { margin: 7px 3px; }
+      .desc div {
+        float: left;
+        font-family: Arial;
+        width: 70px;
+        margin-right: 65px;
+        font-size: 13px;
+        font-weight: bold;
+        color: #000;
+      }
+  </style>
