--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,6 +1,19 @@
 <div class="notification">
 	<!-- Print the notification message -->
-	<li class="notification-message"><span class="label success">New</span>
-		<%= notification.message %>
+	<li class="notification-message">
+      <%if notification.notification_type && notification.notification_type.include?('W') %>
+          <span class="label success">Win</span>
+      <% elsif notification.notification_type && notification.notification_type.include?('N')%>
+          <span class="label important">NewBid</span>
+      <% elsif notification.notification_type && notification.notification_type.include?('S')%>
+          <span class="label success">Sold</span>
+      <% elsif notification.notification_type && notification.notification_type.include?('O')%>
+          <span class="label warning">OutBid</span>
+      <% elsif notification.notification_type && notification.notification_type.include?('D')%>
+          <span class="label important">Delete</span>
+      <% else %>
+          <span class="label default">New</span>
+      <% end %>
+    <%= notification.message %>
 	</li>
 </div>
