--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -13,7 +13,9 @@
     </div>
   <% end %>
 
-      <h1>Payment Information</h1>
+  <div class="row" style="width: 100%; padding-left: 20px">
+     <div class="span10">
+      <h4>Payment Information</h4>
       <div class="field">
         <%= f.label :first_name %><br />
         <%= f.text_field :first_name %>
@@ -37,9 +39,13 @@
       <div class="field">
         <%= f.label :card_verification, "Card Verification Value (CVV)" %><br />
         <%= f.text_field :card_verification %>
-      </div>      </br>
+      </div>      <br/>
 
-      <h1>Billing Address</h1>
+       </div>
+
+     <div class="span6" style="width: 400px;">
+
+      <h4>Billing Address</h4>
       <div class="field">
         <%= f.label :street %><br />
         <%= f.text_field :street, :value => current_user.street%>
@@ -70,5 +76,8 @@
       <div class="actions">
         <%= f.submit "Proceed to Checkout",:class => "btn primary medium", :cart_id => @cart.id %>
       </div>
+
+     </div>
+  </div>
 
 <% end %>
