--- a/app/views/orders/review.html.erb
+++ b/app/views/orders/review.html.erb
@@ -1,7 +1,5 @@
-<h1>Purchase Successful</h1>
-
-<p><strong>Thank you for your order!</strong> We will process it within one business day.</p>
-<p> This order will be shipped to below address</p>
+<div style = "padding-left: 30px">
+<p><b> Your item(s) will be shipped to the below address:</b></p>
 <p>
   <b>Street:</b>
   <%= @order.street %>
@@ -41,4 +39,6 @@
         <% end %>
 
 
-<p><%= link_to "Back to Main Page", root_path %></p>
+<p><%= button_to "Thank you! Go Home", root_path, :class => "btn primary large" %></p>
+
+</div>
