After IT3 presentation -CD

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -91,4 +91,16 @@
 </table>
 
 
+<script>
+    $(function() {
+        var availableTags = [
+        <%Item.all.each do |i|%>
+            "<%= i.title %>",
+        <%end%>
 
+        ];
+        $( "#search" ).autocomplete({
+            source: availableTags
+        });
+    });
+</script>
