--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -134,3 +134,18 @@ var data = [
 
 
 <hr>
+
+
+<script>
+  $(function() {
+    var availableTags = [
+    <%Item.all.each do |i|%>
+      "<%= i.title %>",
+    <%end%>
+
+    ];
+    $( "#search" ).autocomplete({
+      source: availableTags
+    });
+  });
+</script>
